--- a/gb/19/3/7/n11096658.md
+++ b/gb/19/3/7/n11096658.md
@@ -2,7 +2,6 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>如何超前申报2018年碳税退税？</h2>
-
 <h6></h6>
 <hr>
 <p>【大纪元2019年03月07日讯】（大纪元记者季薇多伦多编译报导）联邦碳税在2019年4月正式生效，但民众可以提前申报退碳税。税务专家提醒，联邦已经在2018年的报税表中添加了与碳税退税有关的一栏。</p>
@@ -17,52 +16,42 @@
 <p>吉藤斯称，凡是2018年12月31日居住在萨省、曼省、安省和新布省的省民，每个家庭只可申报一份碳税退税。</p>
 <p>有一些人例外，不能申报。诸如，如果你在2018年的任何时间都是非居民，入狱超过90天，是另一个国家的政府官员或雇工，或者拿了子女特殊津贴。</p>
 <p>责任编辑：文芳</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/31/n11016119.md#1">研究：碳税将致加拿大国内机票价大涨</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/12/n11040133.md#1">民调：大部分中小企业担心无法转嫁碳税</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/18/n11054019.md#1">2019年报税时节到了 哪些变更需关注？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/21/n11059476.md#1">呼吁建油管 抗议车队在国会山前集会</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/28/n11078712.md#1">今年新优惠 安省家庭最多可获307元退税</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938869.md#1">酿魁省日托所两童命案 司机接受神病学评估</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936709.md#1">加财长就银行创办人与中共联系 发安全警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936792.md#1">去年12月加拿大空缺职位近85万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936755.md#1">Loblaw面临过千供应商提价要求压力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13936669.md#1">不满新闻法案 谷歌限加国用户访问新闻五周</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106319.md#1">加拿大鼓励黎巴嫩加拿大人 乘商业航班撤离</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106297.md#1">逾五成加拿大年轻人对财务感焦虑</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106277.md#1">旅游需求居高不下 加航第三季度利润飙升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106260.md#1">民调：超过八成加拿大人为营养吃水产</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106214.md#1">加拿大房价太高 超出家庭养房能力141%</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/6/17/n3896170.md#1" target="_blank">与同事的对话：法轮功没有政治诉求</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/22/n10993844.md#1" target="_blank">阅读《转法轮》 大洋洲法轮功学员谈感悟</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935048.md#1">【未解之谜】来自星星的孩子（3）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930206.md#1">来自《唐阵》的感动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938245.md#1">【舞蹈三剑客】有史以来第一次！神韵首次抵达多明尼加演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937734.md#1">【车评】媲美全尺寸SUV的中型SUV 2023 Hyundai Palisade XRT</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937294.md#1">“一孩难求” 中国迎来首轮幼儿园关停潮</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936809.md#1">北京批准中企援俄？布林肯：几乎确定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937215.md#1">爆发聚集性疫情 中国多地学校停课</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937673.md#1">香港名媛蔡天凤遭杀害分尸 3名涉案嫌犯被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936731.md#1">杜琪峯因电影言论遭封杀 黄明志为前辈抱不平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937630.md#1">打破香港影史纪录 《毒舌大状》本土票房破亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937577.md#1">柏林影展走红毯 范冰冰：5年没拍戏挺残酷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921769.md#1">霹雳果的7大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936555.md#1">晚上睡不着怎么办？心理师推荐改善方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/7/n11096658.htm">如何超前申报2018年碳税退税？</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/19/3/7/n11096658.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
